cargo-features = ["resolver"]

[workspace]
members = [
	"price",
	"serp-market",
	"serp-tes",
	"stp258",
]
resolver = "2"

[patch.crates-io]
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
frame-support = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
frame-system = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
pallet-treasury = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
sp-api = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
sp-io = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
sp-std = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
sp-trie = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
sp-version = { git = "https://github.com/paritytech/substrate.git", rev = "5a94966e91fcd20d5a7981ae8186090221d8f096" }
